--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -4,8 +4,9 @@
 
 </head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<body style ='background-color: #FFFFFF;'>
+<body style ='background-color: teal;'>
 
+<content style ='background-color: #FFFFFF;'>
 <p></p>
 <div class="row">
  	<div class="col-xs-2"></div>
