--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -4,7 +4,7 @@
 
 </head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<body style ='background-color: teal;'>
+<body>
 
 <content style ='background-color: #FFFFFF;'>
 <p></p>
@@ -18,7 +18,7 @@
  				<div class="col-xs-2"><h5>About Portfolio Contact</h5></div>
 </div>
 
-<div class="container" style ='background-color: lightsteelblue;'>
+<div class="container-fluid" style ='background-color: lightsteelblue;'>
 <div class="container">
 
 <div class="row">>
@@ -41,14 +41,16 @@
 
 <div class="container">	
 <div class="row">
-<p>Connect with me </p>
+<p style='color:008080'>Connect with me </p>
 <hr></hr>
+<div class="container">
 <img src="file:///C:/Users/Robert%20Diggle/Downloads/1484895696_github.svg"
 height="80" width="80"/>
 <img src="file:///C:/Users/Robert%20Diggle/Downloads/1484895761_linkedin.svg"
 height="80" width="80"/>
 <img src="file:///C:/Users/Robert%20Diggle/Downloads/1484895870_49.svg"
 height="80" width="80"/>
+</div>
 </div>
 </div>
 
