--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -15,35 +15,41 @@
 
 			<div class="col-xs-2"></div>
 
- 				<div class="col-xs-2"><h5>About Portfolio Contact</h5></div>
+ 				<div class="col-xs-2" style='color:lightgray'><h5>About Portfolio Contact</h5></div>
 </div>
 
 <div class="container-fluid" style ='background-color: lightsteelblue;'>
 <div class="container">
 
-<div class="row">>
+<div class="row">
 	<div class="col-lg-1"></div>
  		<div class="col-xs-4">
- 			<div class="page-header" style='color:008080 ;'><h1> Portfolio </h1></div></div>
+ 			<div class="row" style='color:008080 ;'>
+ 			<div class="col-xs-2"><p></div>
+ 			</div>
+ 			</div>
 </div>
 
 </div>
 
 <div class="container" style ='background-color: white;'>
 	<div class="row">
-		<div class="col-xs-2"></div>
-  	<div class="col-xs-3">
-  		<img src="http://25.media.tumblr.com/24d1caf03636fa518c616a71e1fdeca4/tumblr_mty0xjQRrB1sjj6lwo1_250.gif"/>
+			<h1 style='color:008080 ;'> Portfolio </h1>
+		</div>
+		<hr>
+  	<div class="col-xs-4">
+  	<img src="https://raw.githubusercontent.com/ungoldman/coolgifs.neocities.org/master/gifs/23.gif" height="200" width="200" />
   </div>
   	<div class="col-xs-3">
- 	 	<img src="http://25.media.tumblr.com/24d1caf03636fa518c616a71e1fdeca4/tumblr_mty0xjQRrB1sjj6lwo1_250.gif"/>
+  	<img src="https://raw.githubusercontent.com/ungoldman/coolgifs.neocities.org/master/gifs/23.gif" height="200" width="200" />
  	</div>
 
 <div class="container">	
 <div class="row">
 <p style='color:008080'>Connect with me </p>
-<hr></hr>
+<hr width="370px"></hr>
 <div class="container">
+<div class="col-xs-4">
 <img src="file:///C:/Users/Robert%20Diggle/Downloads/1484895696_github.svg"
 height="80" width="80"/>
 <img src="file:///C:/Users/Robert%20Diggle/Downloads/1484895761_linkedin.svg"
@@ -55,19 +61,17 @@ height="80" width="80"/>
 
  </div>
  	<div class="row">
- 		<div class="col-xs-2"></div>
-  			<div class="col-xs-3">
-  				<img src="http://25.media.tumblr.com/24d1caf03636fa518c616a71e1fdeca4/tumblr_mty0xjQRrB1sjj6lwo1_250.gif"/>
+  			<div class="col-xs-4">
+  	<img src="https://raw.githubusercontent.com/ungoldman/coolgifs.neocities.org/master/gifs/23.gif" height="200" width="200" />
   			</div>
   		<div class="col-xs-3">
- 	 			<img src="http://25.media.tumblr.com/24d1caf03636fa518c616a71e1fdeca4/tumblr_mty0xjQRrB1sjj6lwo1_250.gif"/>
+  	<img src="https://raw.githubusercontent.com/ungoldman/coolgifs.neocities.org/master/gifs/23.gif" height="200" width="200" />
  		</div>
  	</div>
 
 <div class="row">
-  <div class="col-xs-2"></div>
   <div class="col-xs-9">
-  	<img src="http://25.media.tumblr.com/24d1caf03636fa518c616a71e1fdeca4/tumblr_mty0xjQRrB1sjj6lwo1_250.gif"/>
+  	<img src="https://raw.githubusercontent.com/ungoldman/coolgifs.neocities.org/master/gifs/23.gif" height="200" width="200" />
   </div>
  	</div>
 </div>
