--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -4,7 +4,7 @@
 
 </head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<body>
+<body style ='font-family: Georgia'>
 
 <content style ='background-color: #FFFFFF;'>
 <p></p>
